<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CL_FormActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginRight="25dp">

                    <ImageView
                        android:id="@+id/imageView_Form"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@mipmap/user_background"
                        android:foregroundGravity="right|bottom"
                        android:foregroundTintMode="src_over"
                        android:layout_gravity="center"
                        android:foreground="@android:drawable/ic_menu_add" />

                    <Button
                        android:id="@+id/button_camera_Form"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:foreground="@android:drawable/ic_menu_camera"
                        android:foregroundGravity="center" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_reset_photo_Form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_photo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:divider="@drawable/form_divider"
                android:showDividers="middle">

                <ImageView
                    android:id="@+id/imageSpinner_Form"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@android:drawable/ic_menu_week" />

                <Spinner
                    android:id="@+id/spinner_Form"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/weekday" />

                <Button
                    android:id="@+id/add_spinner"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:drawable/ic_menu_add" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:divider="@drawable/form_divider"
                android:showDividers="middle">

                <ImageView
                    android:id="@+id/imageDate_Form"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@android:drawable/ic_menu_month"
                    android:layout_gravity="center_vertical"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_date_form"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/date_format" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/date_form"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/date_search_tei"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/date"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/date_picker"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@android:drawable/ic_menu_today"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:divider="@drawable/form_divider"
                android:showDividers="middle|end">

                <ImageView
                    android:id="@+id/image_food"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/food" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_food_Form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/food"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:divider="@drawable/form_divider"
                android:showDividers="middle|end">

                <ImageView
                    android:id="@+id/image_phone_Form"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@android:drawable/stat_sys_phone_call" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phone_form"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TEI_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:divider="@drawable/form_divider"
                android:showDividers="middle|end">

                <ImageView
                    android:id="@+id/image_email_Form"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@android:drawable/ic_dialog_email" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_form"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TEI_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/e_mail" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:divider="@drawable/form_divider"
                android:showDividers="middle|end">

                <ImageView
                    android:id="@+id/image_address_Form"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@android:drawable/ic_dialog_map" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/address_form"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TEI_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:divider="@drawable/form_divider"
                android:showDividers="middle|end">

                <ImageView
                    android:id="@+id/image_AN_Form"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@android:drawable/ic_menu_myplaces" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/affiliate_number_form"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/TEI_affiliate_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/affiliate_number" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Cancel_Form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/Save_Form"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>