<resources>
    <string name="app_name" translatable="false">Vital Asistencia</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_splash_screen" translatable="false">FullscreenActivity</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_form">Form</string>
    <string name="food">Prepare food?</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="date">Date</string>
    <string name="phone">Phone</string>
    <string name="e_mail">E-mail</string>
    <string name="address">Address</string>
    <string name="affiliate_number">Affiliate number</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="New_User">New User</string>
    <!-- Do NOT delete "x" on next String -->
    <string name="User_List">You got x users</string>
    <string name="weekday">Weekday</string>
    <string name="reset_photo">Reset Photo</string>
    <string name="about_app">About App</string>
    <string name="settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_search">Search</string>
    <string name="orderby">Order By</string>
    <string name="help">Help</string>
    <string name="user_name">User Name</string>
    <string name="date_search">Date</string>
    <string name="search_button">Search</string>
    <string name="title_activity_about">About App</string>
    <string name="About">About App</string>
    <string name="about_this_app">About this App</string>
    <string name="developer">Developer :</string>
    <string name="add">Add</string>
    <string name="date_not_valid">Invalid date or format</string>
    <string name="phone_not_valid">Wrong sintax of phone\n
        Please input a number between 10 and 13(0 includes or +)\n
        Examples: +3412345678 003412345678</string>
    <string name="email_not_valid">Not valid email</string>
    <string name="address_not_valid">Address not valid.\n
        May Start with C or A</string>
    <string name="affiliate_not_valid">Not valid Affiliate Number\n
        Must be 3 numbers followed by 5 Caps characters\n
        Examples: 111AAAAA 123ABCDE</string>
    <string name="delete">Delete</string>
    <string name="deleted_user">Deleting User:</string>
    <string name="P_write_denied">Write Permission Denied</string>
    <string name="P_write_accepted">Write Permission Granted</string>
    <string name="delete_user_dialog_tittle">Alert!</string>
    <string name="delete_user_dialog_message">Your are about to delete this user from list. Are you sure?</string>
    <string name="choose_picture">Select a picture</string>
    <string name="P_write_asking">Asking for permission</string>
    <string name="reset_form">Reset form</string>
    <string name="user_Inserted_Rejected">User cannot be inserted. Change Affiliate Number</string>
    <string name="user_Inserted_Accepted">User properly inserted</string>
    <string name="unknow_Error">Unknow Error</string>
    <string name="unfilled_field">This field must be filled</string>
    <string name="user_Updated">User was updated!</string>
    <string name="weekday_spinner">--Select or add Weekday--</string>
    <string name="accept">Okey</string>
    <string name="search_user_dialog_message">You have not entered any search parameters! Please refill at least once</string>
    <string name="search_caceled">Searched was canceled</string>
    <string name="updating_user">Updating user</string>
    <string name="Help">Help</string>
    <string name="P_nstatus_denied">Network Status Permission Denied</string>
    <string name="P_nstatus_acepted">Network Status Permission Granted</string>
    <string name="connectionError">Connection Error</string>
    <string name="List">List</string>
    <string name="connectionError_message">Check out your internet connection and then try back to this screen. Maybe u don\'t have internet access</string>

</resources>